--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==1.0.2
 SQLAlchemy==1.2
-numpy==1.14.0
-scikit-learn==0.19.0
-tensorflow==1.4.0
-tensorflow-tensorboard==0.4.0rc2
+tensorflow
+tensorflow-tensorboard
+numpy
+scikit-learn
