--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Flask==1.0.2
 SQLAlchemy==1.2
-tensorflow
-tensorflow-tensorboard
-numpy
-scikit-learn
+tensorflow==1.1.0
+numpy==1.12.1
+scikit-learn==0.19.1
